// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTAButton 컴포넌트 테스트 > CategoryButton 스냅샷 테스트 > isClicked속성이 false일 때 스냅샷이 일치한다. 1`] = `
<button
  class="css-1f06yqu"
>
  버튼
</button>
`;

exports[`CTAButton 컴포넌트 테스트 > CategoryButton 스냅샷 테스트 > isClicked속성이 true일 때 스냅샷이 일치한다. 1`] = `
<button
  class="css-1olg23s"
>
  버튼
</button>
`;
